Moar cleanup
Mostly lambda cleanup, but a few minor bugs as well.